compiler/testData/diagnostics/testsWithJsStdLib/dynamicTypes/supertypesAndBounds.fir.kt
interface Tr : <!DYNAMIC_SUPERTYPE!>dynamic<!>

fun <T: dynamic> foo() {}

class C<T> where T : dynamic
